2008-05-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/blur-gauss-selective.c: formatting.

2008-05-14  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.c (gimp_curve_view_motion_notify):
	fixed use of uninitialized value.

2008-05-14  Sven Neumann  <sven@gimp.org>

	* app/actions/windows-actions.c (windows_actions): relabeled
	submenu to "Recently Closed Docks".

2008-05-14  Michael Natterer  <mitch@gimp.org>

	* app/menus/windows-menu.c
	* app/actions/windows-actions.c
	* menus/image-menu.xml.in: move the list of dockable dialogs and
	the list of recent docks to submenus and keep the list of open
	image windows and docks at the "Windows" menu toplevel. The list
	of recent docks doesn't exist yet, its contents are fake.

2008-05-14  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpcurvesconfig.c (gimp_curves_config_copy): also
	copy curve->identity.

2008-05-14  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: Add PF_OPTION. Fixes bug #523142.

2008-05-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrushclipboard.c
	(gimp_brush_clipboard_buffer_changed): for an opaque buffer,
	initialize the brush mask with 255 instead of 0.  Fixes bug #532886.

2008-05-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/gradient-flare/gradient-flare.c
	(calc_sample_one_gradient): use G_STRUCT_OFFSET() instead of a
	hand-made macro which caused a compiler warning (spotted by gymp,
	bug #532853).

2008-05-14  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo-book.[ch]: remove widget member from
	struct GimpSessionInfoBook. Return the created GimpDockbook from
	restore().

	* app/widgets/gimpsessioninfo-dock.c (restore): use the returned
	book instead of the struct member.

2008-05-14  Michael Natterer  <mitch@gimp.org>

	Made session info serialization independent from widgets so it can
	be used on stored dock layouts which are not open:

	* app/widgets/gimpsessioninfo-book.[ch]
	* app/widgets/gimpsessioninfo-dock.[ch]